--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,157 +1,286 @@
-/******* nav */
-nav {
-    display: flex;
-    flex-direction: column;
-    width: 12rem;
-}
-/* Add a black background color to the top navigation */
-.sidenav {
-    overflow: hidden;
+/*=============== GOOGLE FONTS ===============*/
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap");
+
+/*=============== VARIABLES CSS ===============*/
+:root {
+  /*========== Colors ==========*/
+  --hue-color: 240;
+
+  --first-color: hsl(var(--hue-color), 53%, 49%);
+  --title-color: hsl(var(--hue-color), 53%, 15%);
+  --text-color: hsl(var(--hue-color), 12%, 35%);
+  --text-color-light: hsl(var(--hue-color), 12%, 65%);
+  --white-color: #FFF;
+  --body-color: hsl(var(--hue-color), 24%, 94%);
+
+  /*========== Font and typography ==========*/
+  --body-font: 'Poppins', sans-serif;
+  --biggest-font-size: 3rem;
+  --small-font-size: .813rem;
+  --smaller-font-size: .75rem;
+  --tiny-font-size: .625rem;
+
+  /*========== Font weight ==========*/
+  --font-medium: 500;
+
+  /*========== Margenes Bottom ==========*/
+  --mb-0-25: .25rem;
+  --mb-1: 1rem;
+  --mb-1-5: 1.5rem;
+  --mb-2-5: 2.5rem;
+
+  /*========== z index ==========*/
+  --z-normal: 1;
+  --z-tooltip: 10;
 }
 
-/* Style the links inside the navigation bar */
-.sidenav a {
-    float: left;
-    color: #faf8ef;
-    background-color: #BBADA0;
-    text-align: center;
-    padding: 0.5rem 0.25rem;
-    text-decoration: none;
-    font-size: 17px;
-    margin: 1rem;
-    border: 2px solid faf8ef;
+@media screen and (min-width: 968px) {
+  :root {
+    --biggest-font-size: 3.5rem;
+    --small-font-size: .875rem;
+    --smaller-font-size: .813rem;
+    --tiny-font-size: .75rem;
+  }
 }
 
-/* Change the color of links on hover */
-.sidenav a:hover {
-    background-color: #faf8ef;
-    color: #BBADA0;
+/*========== Variables Dark theme ==========*/
+body.dark-theme {
+  --title-color: hsl(var(--hue-color), 12%, 95%);
+  --text-color: hsl(var(--hue-color), 12%, 75%);
+  --body-color: hsl(var(--hue-color), 10%, 16%);
 }
 
-/* Add a color to the active/current link */
-.sidenav a.active {
-    background-color: #04AA6D;
-    color: white;
+/*========== Button Dark/Light ==========*/
+.clock__theme {
+  position: absolute;
+  top: -1rem;
+  right: -1rem;
+  display: flex;
+  padding: .25rem;
+  border-radius: 50%;
+  box-shadow: inset -1px -1px 1px hsla(var(--hue-color), 0%, 100%, 1), 
+              inset 1px 1px 1px hsla(var(--hue-color), 30%, 86%, 1);
+  color: var(--first-color);
+  cursor: pointer;
+  transition: .4s; 
 }
 
-/******* body */
+/*========== Box shadow Dark theme ==========*/
+.dark-theme .clock__circle {
+  box-shadow: 6px 6px 16px hsla(var(--hue-color), 8%, 12%, 1), 
+              -6px -6px 16px hsla(var(--hue-color), 8%, 20%, 1), 
+              inset -6px -6px 16px hsla(var(--hue-color), 8%, 20%, 1), 
+              inset 6px 6px 12px hsla(var(--hue-color), 8%, 12%, 1);
+}
+
+.dark-theme .clock__theme {
+  box-shadow: inset -1px -1px 1px hsla(var(--hue-color), 8%, 20%, 1), 
+              inset 1px 1px 1px hsla(var(--hue-color), 8%, 12%, 1);
+}
+
+/*=============== BASE ===============*/
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
 body {
-    background-color: #faf8ef;
-    height: 404px;
-    display: flex;
-    justify-content: center;
-    font-family: "Clear Sans", "Helvetica Neue"
+  margin: 0;
+  font-family: var(--body-font);
+  background-color: var(--body-color);
+  color: var(--text-color);
+  transition: .4s; 
 }
 
-.descriptions {
-    font-size: 1.25rem;
-    color: #776E65;
+a {
+  text-decoration: none;
 }
 
-/******* good mood */
-#dad-joke {
-    width: 456px;
-
-}
-
-#selftalk {
-    width: 456px;
-}
-
-
-/******* game 2048 */
+/*=============== REUSABLE CSS CLASSES ===============*/
 .container {
-    width: 668px;
-    height: 404px;
-    margin-top: 5px;
-    display: -webkit-box;
-    justify-content: center;
-    align-items: center;
-}
-
-.info {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 0.25rem;
+  max-width: 968px;
+  margin-left: var(--mb-1);
+  margin-right: var(--mb-1);
 }
 
 .grid {
-    display: flex;
-    flex-wrap: wrap;
-    width: 344px;
-    height: 344px;
-    background-color: #BBADA0;
-    border: 3px solid #BBADA0;
-    border-radius: 4px;
+  display: grid;
 }
 
-.grid div {
-    width: 80px;
-    height: 80px;
-    margin: 3px;
-    border-radius: 2px;
-    background-color: #EEE4DA;
-    color: #afa192;
-    font-weight: bold;
-    text-align: center;
-    font-size: 60px;
-    line-height: 1.3;
+/*=============== CLOCK ===============*/
+.clock__container {
+  height: 100vh;
+  grid-template-rows: 1fr max-content;
 }
 
-.score-container {
-    text-align: center;
-    width: 60px;
-    height: 50px;
-    border-radius: 3px;
-    background-color: #8f7a66;
-    color: #FFFFFF;
+.clock__circle {
+  position: relative;
+  width: 200px;
+  height: 200px;
+  box-shadow: -6px -6px 16px var(--white-color), 
+              6px 6px 16px hsla(var(--hue-color), 30%, 86%, 1), 
+              inset 6px 6px 16px hsla(var(--hue-color), 30%, 86%, 1), 
+              inset -6px -6px 16px var(--white-color);
+  border-radius: 50%;
+  justify-self: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: .4s; 
 }
 
-.game {
-    color: #776E65;
-    width: 348px;
+.clock__content {
+  align-self: center;
+  row-gap: 3.5rem;
 }
 
-#score {
-    font-size: 1.5rem;
+.clock__twelve, 
+.clock__three, 
+.clock__six, 
+.clock__nine {
+  position: absolute;
+  width: 1rem;
+  height: 1px;
+  background-color: var(--text-color-light);
 }
 
-.score-title {
-    font-size: 1rem;
+.clock__twelve, 
+.clock__six {
+  transform: translateX(-50%) rotate(90deg);
 }
 
-
-/******* self_talk */
-.saying {
-    font-size: 1.25rem;
-
+.clock__twelve {
+  top: 1.25rem;
+  left: 50%;
 }
 
-
-footer {
-    text-align: right;
-    padding-right: 1rem;
+.clock__three {
+  top: 50%;
+  right: .75rem;
 }
 
-ul {
-    display: table-row;
-    list-style: none;
+.clock__six {
+  bottom: 1.25rem;
+  left: 50%;
 }
 
-li {
-    display: table-row;
+.clock__nine {
+  left: .75rem;
+  top: 50%;
 }
 
-li::before {
-    display: table-cell;
-    text-align: right;
-    content: "+";
-    font-size: 1em;
-    font-weight: bold;
-    color: #FF404C;
-    padding-right: 12px;
+.clock__rounder {
+  width: .75rem;
+  height: .75rem;
+  background-color: var(--first-color);
+  border-radius: 50%;
+  border: 2px solid var(--body-color);
+  z-index: var(--z-tooltip);
 }
 
-li:not(:first-of-type)::before {
-    padding-top: 12px;
+.clock__hour, 
+.clock__minutes, 
+.clock__seconds {
+  position: absolute;
+  display: flex;
+  justify-content: center;
 }
+
+.clock__hour {
+  width: 105px;
+  height: 105px;
+}
+
+.clock__hour::before {
+  content: '';
+  position: absolute;
+  background-color: var(--text-color);
+  width: .25rem;
+  height: 3rem;
+  border-radius: .75rem;
+  z-index: var(--z-normal);
+}
+
+.clock__minutes {
+  width: 136px;
+  height: 136px;
+}
+
+.clock__minutes::before {
+  content: '';
+  position: absolute;
+  background-color: var(--text-color);
+  width: .25rem;
+  height: 4rem;
+  border-radius: .75rem;
+  z-index: var(--z-normal);
+}
+
+.clock__seconds {
+  width: 130px;
+  height: 130px;
+}
+
+.clock__seconds::before {
+  content: '';
+  position: absolute;
+  background-color: var(--first-color);
+  width: .125rem;
+  height: 5rem;
+  border-radius: .75rem;
+  z-index: var(--z-normal);
+}
+
+.clock__logo {
+  width: max-content;
+  justify-self: center;
+  margin-bottom: var(--mb-2-5);
+  font-size: var(--smaller-font-size);
+  font-weight: var(--font-medium);
+  color: var(--text-color-light);
+  transition: .3s;
+}
+
+.clock__logo:hover {
+  color: var(--first-color);
+}
+
+.clock__text {
+  display: flex;
+  justify-content: center;
+}
+
+.clock__text-hour, 
+.clock__text-minutes {
+  font-size: var(--biggest-font-size);
+  font-weight: var(--font-medium);
+  color: var(--title-color);
+}
+
+.clock__text-ampm {
+  font-size: var(--tiny-font-size);
+  color: var(--title-color);
+  font-weight: var(--font-medium);
+  margin-left: var(--mb-0-25);
+}
+
+.clock__date {
+  text-align: center;
+  font-size: var(--small-font-size);
+  font-weight: var(--font-medium);
+}
+
+/*=============== MEDIA QUERIES ===============*/
+/* For large devices */
+@media screen and (min-width: 968px) {
+  .container {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .clock__logo {
+    margin-bottom: 3rem;
+  }
+}
+
+/****************************************************************/
